# bitplot

./: .gitignore  README.md  bitplot.py  bpt.py  pyproject.toml
data/: bpt_parser.py  config.py  front.py  sideapps.py
front/: loading_page.py  main_page.py  password_screen.py  progress_bar.py  warning.py  warnings.py
utils/: analyzers.py  converters.py  convertors.py  fs_ops.py  plots.py  sniffer.py
