[tool.poetry]
name = "bitplot"
version = "1.1"
description = "Convert bits to plots"
authors = ["lexduke <dyukarev.work@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
